--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -319,6 +319,14 @@ h3 {
     width: 40%;
 }
 
+.flex .col-7 {
+    width: 70%;
+}
+
+.flex .col-3 {
+    width: 28%;
+}
+
 .flex-top {
     -webkit-box-align: start;
     -ms-flex-align: start;
